Relocate actions manifest

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -19,12 +19,15 @@ jobs:
 
       - name: Install dependencies
         run: yarn install
+        working-directory: server
 
       - name: Run tests
         run: yarn test
+        working-directory: server
 
       - name: Run tests
         run: yarn test:e2e
+        working-directory: server
 
   Publish:
     needs: Build
@@ -44,3 +47,4 @@ jobs:
       - run: >-
           docker buildx build --platform linux/arm64,linux/amd64
           --push --tag ${{ env.BUILD_IMAGE }}
+        working-directory: server
