--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -46,5 +46,5 @@ jobs:
       - run: docker run --rm --privileged tonistiigi/binfmt --install all
       - run: >-
           docker buildx build --platform linux/arm64,linux/amd64
-          --push --tag ${{ env.BUILD_IMAGE }}
+          --push --tag ${{ env.BUILD_IMAGE }} .
         working-directory: server
