--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -6,11 +6,11 @@ maintainers = [
     { name = "Vadim Laletin", email = "vadim@beda.software" },
     { name = "Ilya Beda", email = "ilya@beda.software" },
 ]
-license = { text = "BSD-3-Clause" }
+license = { text = "MIT" }
 requires-python = ">=3.9"
 keywords = ["fhir", "fhirpath"]
 dynamic = ["version", "classifiers"]
-dependencies = []
+dependencies = ["fhirpathpy (>=1.2.1,<2.0.0)"]
 
 [project.urls]
 homepage = "https://github.com/beda-software/FHIRPathMappingLanguage/tree/main/python/"
@@ -40,6 +40,16 @@ readme = ["README.md", "../README.md"]
 [tool.poetry.dependencies]
 python = ">=3.9,<4.0"
 
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.9.7"
+
+
+[tool.poetry.group.test.dependencies]
+pytest = "^8.3.4"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+line-length = 100
