--- a/ts/server/package.json
+++ b/ts/server/package.json
@@ -66,6 +66,7 @@
             "**/*.(t|j)s"
         ],
         "coverageDirectory": "../coverage",
+        "coverageReporters": ["text", "html"],
         "testEnvironment": "node"
     }
 }
