--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,5 +1,10 @@
 name: github-actions
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - "*"
+    tags-ignore:
+      - "v*.*.*"
 env:
   BUILD_IMAGE: bedasoftware/fhirpath-extract:main
 jobs:
@@ -49,52 +54,5 @@ jobs:
           --push --tag ${{ env.BUILD_IMAGE }} .
         working-directory: ts/server
 
-  build-and-test-fpml-py:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-          - python-version: 3.9
-          - python-version: "3.10"
-          - python-version: "3.11"
-          - python-version: "3.12"
-          - python-version: "3.13"
-    env:
-      PYTHON: ${{ matrix.python-version }}
-    steps:
-      - uses: actions/checkout@v3
-      - name: Python ${{ matrix.python-version }} sample
-        uses: actions/setup-python@v3
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install poetry
-          poetry --project=./python install
-      - name: Run lint
-        run: poetry --project=./python run ruff check ./python
-      - name: Run typecheck
-        run: poetry --project=./python run mypy ./python
-      - name: Run tests
-        run: poetry --project=./python run pytest --cov
-
-  publish-fpml-py-to-pypi:
-    needs: build-and-test-fpml-py
-    if: github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-    permissions:
-      packages: write
-      contents: read
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v3
-        with:
-          python-version: "3.11"
-      - name: Install wheel and build
-        run: pip install wheel build
-      - name: Build a binary wheel and a source tarball
-        run: poetry build
-      - name: Publish package
-        uses: pypa/gh-action-pypi-publish@release/v1
+  test-fpml-py:
+    uses: ./.github/workflows/test-python.yml
