--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,6 +10,8 @@ jobs:
   publish-fpml-py-to-pypi:
     needs: test-fpml-py
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python 3.11
@@ -24,3 +26,5 @@ jobs:
         run: poetry --project=./python build
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          packages-dir: python/dist/
