Add support for array expression. Closes #20

--- a/python/pyproject.toml
+++ b/python/pyproject.toml
@@ -1,5 +1,6 @@
 [project]
 name = "fpml"
+version = "0.1.0"
 description = "The FHIRPath mapping language is a data DSL designed to convert data from QuestionnaireResponse (and not only) to any FHIR Resource."
 authors = [{ name = "Beda Software", email = "ilya@beda.software" }]
 maintainers = [
@@ -9,7 +10,7 @@ maintainers = [
 license = { text = "MIT" }
 requires-python = ">=3.9"
 keywords = ["fhir", "fhirpath"]
-dynamic = ["version", "classifiers"]
+dynamic = ["classifiers"]
 dependencies = ["fhirpathpy (>=1.2.1,<2.0.0)"]
 
 [project.urls]
@@ -19,7 +20,6 @@ documentation = "https://github.com/beda-software/FHIRPathMappingLanguage/tree/m
 "Bug Tracker" = "https://github.com/beda-software/FHIRPathMappingLanguage/issues"
 
 [tool.poetry]
-version = "0.0.1"
 packages = [{ include = "fpml" }]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
