--- a/.github/workflows/publish-dockerhub.yml
+++ b/.github/workflows/publish-dockerhub.yml
@@ -8,7 +8,7 @@ jobs:
     uses: ./.github/workflows/test-ts.yml
 
   publish-fpml-ts-to-dockerhub:
-    needs: build-and-test-fpml-server-ts
+    needs: test-fpml-ts
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
 
